still on the issue of background-image not showing for safari

--- a/damoke.css
+++ b/damoke.css
@@ -110,7 +110,7 @@ header {
 }
 
 .services-container {
-    background: url('public/damoke.jpg');
+    background: url(public/mock\ 2a.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
